--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "proreadme",
+  "name": "static-site",
   "version": "1.0.0",
-  "description": "## Your Task",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "inquirer": "^8.2.4"
-  }
+  },
+  "keywords": [],
+  "description": ""
 }
